tests/rosetta/transpiler/CPP/24-game-solve.error
compile: exit status 1
/workspace/mochi/tests/rosetta/transpiler/CPP/24-game-solve.cpp: In function ‘bool solve(const std::vector<std::unique_ptr<Expr> >&)’:
/workspace/mochi/tests/rosetta/transpiler/CPP/24-game-solve.cpp:196:40: error: no matching function for call to ‘Bin::Bin(<brace-enclosed initializer list>)’
  196 |             Bin node = Bin{OP_ADD, a, b};
      |                                        ^
/workspace/mochi/tests/rosetta/transpiler/CPP/24-game-solve.cpp:58:5: note: candidate: ‘Bin::Bin(int, std::unique_ptr<Expr>, std::unique_ptr<Expr>)’
   58 |     Bin(int op_, std::unique_ptr<Expr> left_, std::unique_ptr<Expr> right_) : op(op_), left(std::move(left_)), right(std::move(right_)) {}
      |     ^~~
/workspace/mochi/tests/rosetta/transpiler/CPP/24-game-solve.cpp:58:40: note:   no known conversion for argument 2 from ‘Expr*’ to ‘std::unique_ptr<Expr>’
   58 |     Bin(int op_, std::unique_ptr<Expr> left_, std::unique_ptr<Expr> right_) : op(op_), left(std::move(left_)), right(std::move(right_)) {}
      |                  ~~~~~~~~~~~~~~~~~~~~~~^~~~~
/workspace/mochi/tests/rosetta/transpiler/CPP/24-game-solve.cpp:54:8: note: candidate: ‘Bin::Bin(Bin&&)’
   54 | struct Bin : Expr {
      |        ^~~
/workspace/mochi/tests/rosetta/transpiler/CPP/24-game-solve.cpp:54:8: note:   candidate expects 1 argument, 3 provided
/workspace/mochi/tests/rosetta/transpiler/CPP/24-game-solve.cpp:198:36: error: no matching function for call to ‘Bin::Bin(<brace-enclosed initializer list>)’
  198 |                 node = Bin{op, a, b};
      |                                    ^
/workspace/mochi/tests/rosetta/transpiler/CPP/24-game-solve.cpp:58:5: note: candidate: ‘Bin::Bin(int, std::unique_ptr<Expr>, std::unique_ptr<Expr>)’
   58 |     Bin(int op_, std::unique_ptr<Expr> left_, std::unique_ptr<Expr> right_) : op(op_), left(std::move(left_)), right(std::move(right_)) {}
      |     ^~~
/workspace/mochi/tests/rosetta/transpiler/CPP/24-game-solve.cpp:58:40: note:   no known conversion for argument 2 from ‘Expr*’ to ‘std::unique_ptr<Expr>’
   58 |     Bin(int op_, std::unique_ptr<Expr> left_, std::unique_ptr<Expr> right_) : op(op_), left(std::move(left_)), right(std::move(right_)) {}
      |                  ~~~~~~~~~~~~~~~~~~~~~~^~~~~
/workspace/mochi/tests/rosetta/transpiler/CPP/24-game-solve.cpp:54:8: note: candidate: ‘Bin::Bin(Bin&&)’
   54 | struct Bin : Expr {
      |        ^~~
/workspace/mochi/tests/rosetta/transpiler/CPP/24-game-solve.cpp:54:8: note:   candidate expects 1 argument, 3 provided
/workspace/mochi/tests/rosetta/transpiler/CPP/24-game-solve.cpp: In lambda function:
/workspace/mochi/tests/rosetta/transpiler/CPP/24-game-solve.cpp:199:128: error: no matching function for call to ‘std::unique_ptr<Expr>::unique_ptr(Bin&)’
  199 |                 if (solve((std::vector<std::unique_ptr<Expr>>)(([&]{ auto __tmp = rest; __tmp.push_back((std::unique_ptr<Expr>)node); return __tmp; }())))) {
      |                                                                                                                                ^~~~
In file included from /usr/include/c++/13/memory:78,
                 from /workspace/mochi/tests/rosetta/transpiler/CPP/24-game-solve.cpp:4:
/usr/include/c++/13/bits/unique_ptr.h:390:9: note: candidate: ‘template<class _Up, class> std::unique_ptr<_Tp, _Dp>::unique_ptr(std::auto_ptr<_Up>&&) [with <template-parameter-2-2> = _Up; _Tp = Expr; _Dp = std::default_delete<Expr>]’
  390 |         unique_ptr(auto_ptr<_Up>&& __u) noexcept;
      |         ^~~~~~~~~~
/usr/include/c++/13/bits/unique_ptr.h:390:9: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/rosetta/transpiler/CPP/24-game-solve.cpp:199:128: note:   ‘Bin’ is not derived from ‘std::auto_ptr<_Up>’
  199 |                 if (solve((std::vector<std::unique_ptr<Expr>>)(([&]{ auto __tmp = rest; __tmp.push_back((std::unique_ptr<Expr>)node); return __tmp; }())))) {
      |                                                                                                                                ^~~~
/usr/include/c++/13/bits/unique_ptr.h:380:9: note: candidate: ‘template<class _Up, class _Ep, class> std::unique_ptr<_Tp, _Dp>::unique_ptr(std::unique_ptr<_Up, _Ep>&&) [with _Ep = _Up; <template-parameter-2-3> = _Ep; _Tp = Expr; _Dp = std::default_delete<Expr>]’
  380 |         unique_ptr(unique_ptr<_Up, _Ep>&& __u) noexcept
      |         ^~~~~~~~~~
/usr/include/c++/13/bits/unique_ptr.h:380:9: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/rosetta/transpiler/CPP/24-game-solve.cpp:199:128: note:   ‘Bin’ is not derived from ‘std::unique_ptr<_Tp, _Dp>’
  199 |                 if (solve((std::vector<std::unique_ptr<Expr>>)(([&]{ auto __tmp = rest; __tmp.push_back((std::unique_ptr<Expr>)node); return __tmp; }())))) {
      |                                                                                                                                ^~~~
/usr/include/c++/13/bits/unique_ptr.h:359:19: note: candidate: ‘template<class _Del, class> constexpr std::unique_ptr<_Tp, _Dp>::unique_ptr(std::nullptr_t) [with <template-parameter-2-2> = _Del; _Tp = Expr; _Dp = std::default_delete<Expr>]’
  359 |         constexpr unique_ptr(nullptr_t) noexcept
      |                   ^~~~~~~~~~
/usr/include/c++/13/bits/unique_ptr.h:359:19: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/rosetta/transpiler/CPP/24-game-solve.cpp:199:128: note:   cannot convert ‘node’ (type ‘Bin’) to type ‘std::nullptr_t’
  199 |                 if (solve((std::vector<std::unique_ptr<Expr>>)(([&]{ auto __tmp = rest; __tmp.push_back((std::unique_ptr<Expr>)node); return __tmp; }())))) {
      |                                                                                                                                ^~~~
/usr/include/c++/13/bits/unique_ptr.h:353:9: note: candidate: ‘template<class _Del, class _DelUnref> std::unique_ptr<_Tp, _Dp>::unique_ptr(pointer, std::__enable_if_t<std::is_lvalue_reference<_Del>::value, _DelUnref&&>) [with _DelUnref = _Del; _Tp = Expr; _Dp = std::default_delete<Expr>]’ (deleted)
  353 |         unique_ptr(pointer,
      |         ^~~~~~~~~~
/usr/include/c++/13/bits/unique_ptr.h:353:9: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/rosetta/transpiler/CPP/24-game-solve.cpp:199:128: note:   candidate expects 2 arguments, 1 provided
  199 |                 if (solve((std::vector<std::unique_ptr<Expr>>)(([&]{ auto __tmp = rest; __tmp.push_back((std::unique_ptr<Expr>)node); return __tmp; }())))) {
      |                                                                                                                                ^~~~
/usr/include/c++/13/bits/unique_ptr.h:344:9: note: candidate: ‘template<class _Del, class> std::unique_ptr<_Tp, _Dp>::unique_ptr(pointer, std::__enable_if_t<(! std::is_lvalue_reference<_Del>::value), _Del&&>) [with <template-parameter-2-2> = _Del; _Tp = Expr; _Dp = std::default_delete<Expr>]’
  344 |         unique_ptr(pointer __p,
      |         ^~~~~~~~~~
/usr/include/c++/13/bits/unique_ptr.h:344:9: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/rosetta/transpiler/CPP/24-game-solve.cpp:199:128: note:   candidate expects 2 arguments, 1 provided
  199 |                 if (solve((std::vector<std::unique_ptr<Expr>>)(([&]{ auto __tmp = rest; __tmp.push_back((std::unique_ptr<Expr>)node); return __tmp; }())))) {
      |                                                                                                                                ^~~~
/usr/include/c++/13/bits/unique_ptr.h:331:9: note: candidate: ‘template<class _Del, class> std::unique_ptr<_Tp, _Dp>::unique_ptr(pointer, const deleter_type&) [with <template-parameter-2-2> = _Del; _Tp = Expr; _Dp = std::default_delete<Expr>]’
  331 |         unique_ptr(pointer __p, const deleter_type& __d) noexcept
      |         ^~~~~~~~~~
/usr/include/c++/13/bits/unique_ptr.h:331:9: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/rosetta/transpiler/CPP/24-game-solve.cpp:199:128: note:   candidate expects 2 arguments, 1 provided
  199 |                 if (solve((std::vector<std::unique_ptr<Expr>>)(([&]{ auto __tmp = rest; __tmp.push_back((std::unique_ptr<Expr>)node); return __tmp; }())))) {
      |                                                                                                                                ^~~~
/usr/include/c++/13/bits/unique_ptr.h:317:9: note: candidate: ‘template<class _Del, class> std::unique_ptr<_Tp, _Dp>::unique_ptr(pointer) [with <template-parameter-2-2> = _Del; _Tp = Expr; _Dp = std::default_delete<Expr>]’
  317 |         unique_ptr(pointer __p) noexcept
      |         ^~~~~~~~~~
/usr/include/c++/13/bits/unique_ptr.h:317:9: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/rosetta/transpiler/CPP/24-game-solve.cpp:199:128: note:   cannot convert ‘node’ (type ‘Bin’) to type ‘std::unique_ptr<Expr>::pointer’ {aka ‘Expr*’}
  199 |                 if (solve((std::vector<std::unique_ptr<Expr>>)(([&]{ auto __tmp = rest; __tmp.push_back((std::unique_ptr<Expr>)node); return __tmp; }())))) {
      |                                                                                                                                ^~~~
/usr/include/c++/13/bits/unique_ptr.h:304:19: note: candidate: ‘template<class _Del, class> constexpr std::unique_ptr<_Tp, _Dp>::unique_ptr() [with <template-parameter-2-2> = _Del; _Tp = Expr; _Dp = std::default_delete<Expr>]’
  304 |         constexpr unique_ptr() noexcept
      |                   ^~~~~~~~~~
/usr/include/c++/13/bits/unique_ptr.h:304:19: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/rosetta/transpiler/CPP/24-game-solve.cpp:199:128: note:   candidate expects 0 arguments, 1 provided
  199 |                 if (solve((std::vector<std::unique_ptr<Expr>>)(([&]{ auto __tmp = rest; __tmp.push_back((std::unique_ptr<Expr>)node); return __tmp; }())))) {
      |                                                                                                                                ^~~~
/usr/include/c++/13/bits/unique_ptr.h:366:7: note: candidate: ‘std::unique_ptr<_Tp, _Dp>::unique_ptr(std::unique_ptr<_Tp, _Dp>&&) [with _Tp = Expr; _Dp = std::default_delete<Expr>]’
  366 |       unique_ptr(unique_ptr&&) = default;
      |       ^~~~~~~~~~
/usr/include/c++/13/bits/unique_ptr.h:366:18: note:   no known conversion for argument 1 from ‘Bin’ to ‘std::unique_ptr<Expr>&&’
  366 |       unique_ptr(unique_ptr&&) = default;
      |                  ^~~~~~~~~~~~
/workspace/mochi/tests/rosetta/transpiler/CPP/24-game-solve.cpp: In function ‘bool solve(const std::vector<std::unique_ptr<Expr> >&)’:
/workspace/mochi/tests/rosetta/transpiler/CPP/24-game-solve.cpp:203:36: error: no matching function for call to ‘Bin::Bin(<brace-enclosed initializer list>)’
  203 |             node = Bin{OP_SUB, b, a};
      |                                    ^
/workspace/mochi/tests/rosetta/transpiler/CPP/24-game-solve.cpp:58:5: note: candidate: ‘Bin::Bin(int, std::unique_ptr<Expr>, std::unique_ptr<Expr>)’
   58 |     Bin(int op_, std::unique_ptr<Expr> left_, std::unique_ptr<Expr> right_) : op(op_), left(std::move(left_)), right(std::move(right_)) {}
      |     ^~~
/workspace/mochi/tests/rosetta/transpiler/CPP/24-game-solve.cpp:58:40: note:   no known conversion for argument 2 from ‘Expr*’ to ‘std::unique_ptr<Expr>’
   58 |     Bin(int op_, std::unique_ptr<Expr> left_, std::unique_ptr<Expr> right_) : op(op_), left(std::move(left_)), right(std::move(right_)) {}
      |                  ~~~~~~~~~~~~~~~~~~~~~~^~~~~
/workspace/mochi/tests/rosetta/transpiler/CPP/24-game-solve.cpp:54:8: note: candidate: ‘Bin::Bin(Bin&&)’
   54 | struct Bin : Expr {
      |        ^~~
/workspace/mochi/tests/rosetta/transpiler/CPP/24-game-solve.cpp:54:8: note:   candidate expects 1 argument, 3 provided
/workspace/mochi/tests/rosetta/transpiler/CPP/24-game-solve.cpp: In lambda function:
/workspace/mochi/tests/rosetta/transpiler/CPP/24-game-solve.cpp:204:124: error: no matching function for call to ‘std::unique_ptr<Expr>::unique_ptr(Bin&)’
  204 |             if (solve((std::vector<std::unique_ptr<Expr>>)(([&]{ auto __tmp = rest; __tmp.push_back((std::unique_ptr<Expr>)node); return __tmp; }())))) {
      |                                                                                                                            ^~~~
/usr/include/c++/13/bits/unique_ptr.h:390:9: note: candidate: ‘template<class _Up, class> std::unique_ptr<_Tp, _Dp>::unique_ptr(std::auto_ptr<_Up>&&) [with <template-parameter-2-2> = _Up; _Tp = Expr; _Dp = std::default_delete<Expr>]’
  390 |         unique_ptr(auto_ptr<_Up>&& __u) noexcept;
      |         ^~~~~~~~~~
/usr/include/c++/13/bits/unique_ptr.h:390:9: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/rosetta/transpiler/CPP/24-game-solve.cpp:204:124: note:   ‘Bin’ is not derived from ‘std::auto_ptr<_Up>’
  204 |             if (solve((std::vector<std::unique_ptr<Expr>>)(([&]{ auto __tmp = rest; __tmp.push_back((std::unique_ptr<Expr>)node); return __tmp; }())))) {
      |                                                                                                                            ^~~~
/usr/include/c++/13/bits/unique_ptr.h:380:9: note: candidate: ‘template<class _Up, class _Ep, class> std::unique_ptr<_Tp, _Dp>::unique_ptr(std::unique_ptr<_Up, _Ep>&&) [with _Ep = _Up; <template-parameter-2-3> = _Ep; _Tp = Expr; _Dp = std::default_delete<Expr>]’
  380 |         unique_ptr(unique_ptr<_Up, _Ep>&& __u) noexcept
      |         ^~~~~~~~~~
/usr/include/c++/13/bits/unique_ptr.h:380:9: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/rosetta/transpiler/CPP/24-game-solve.cpp:204:124: note:   ‘Bin’ is not derived from ‘std::unique_ptr<_Tp, _Dp>’
  204 |             if (solve((std::vector<std::unique_ptr<Expr>>)(([&]{ auto __tmp = rest; __tmp.push_back((std::unique_ptr<Expr>)node); return __tmp; }())))) {
      |                                                                                                                            ^~~~
/usr/include/c++/13/bits/unique_ptr.h:359:19: note: candidate: ‘template<class _Del, class> constexpr std::unique_ptr<_Tp, _Dp>::unique_ptr(std::nullptr_t) [with <template-parameter-2-2> = _Del; _Tp = Expr; _Dp = std::default_delete<Expr>]’
  359 |         constexpr unique_ptr(nullptr_t) noexcept
      |                   ^~~~~~~~~~
/usr/include/c++/13/bits/unique_ptr.h:359:19: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/rosetta/transpiler/CPP/24-game-solve.cpp:204:124: note:   cannot convert ‘node’ (type ‘Bin’) to type ‘std::nullptr_t’
  204 |             if (solve((std::vector<std::unique_ptr<Expr>>)(([&]{ auto __tmp = rest; __tmp.push_back((std::unique_ptr<Expr>)node); return __tmp; }())))) {
      |                                                                                                                            ^~~~
/usr/include/c++/13/bits/unique_ptr.h:353:9: note: candidate: ‘template<class _Del, class _DelUnref> std::unique_ptr<_Tp, _Dp>::unique_ptr(pointer, std::__enable_if_t<std::is_lvalue_reference<_Del>::value, _DelUnref&&>) [with _DelUnref = _Del; _Tp = Expr; _Dp = std::default_delete<Expr>]’ (deleted)
  353 |         unique_ptr(pointer,
      |         ^~~~~~~~~~
/usr/include/c++/13/bits/unique_ptr.h:353:9: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/rosetta/transpiler/CPP/24-game-solve.cpp:204:124: note:   candidate expects 2 arguments, 1 provided
  204 |             if (solve((std::vector<std::unique_ptr<Expr>>)(([&]{ auto __tmp = rest; __tmp.push_back((std::unique_ptr<Expr>)node); return __tmp; }())))) {
      |                                                                                                                            ^~~~
/usr/include/c++/13/bits/unique_ptr.h:344:9: note: candidate: ‘template<class _Del, class> std::unique_ptr<_Tp, _Dp>::unique_ptr(pointer, std::__enable_if_t<(! std::is_lvalue_reference<_Del>::value), _Del&&>) [with <template-parameter-2-2> = _Del; _Tp = Expr; _Dp = std::default_delete<Expr>]’
  344 |         unique_ptr(pointer __p,
      |         ^~~~~~~~~~
/usr/include/c++/13/bits/unique_ptr.h:344:9: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/rosetta/transpiler/CPP/24-game-solve.cpp:204:124: note:   candidate expects 2 arguments, 1 provided
  204 |             if (solve((std::vector<std::unique_ptr<Expr>>)(([&]{ auto __tmp = rest; __tmp.push_back((std::unique_ptr<Expr>)node); return __tmp; }())))) {
      |                                                                                                                            ^~~~
/usr/include/c++/13/bits/unique_ptr.h:331:9: note: candidate: ‘template<class _Del, class> std::unique_ptr<_Tp, _Dp>::unique_ptr(pointer, const deleter_type&) [with <template-parameter-2-2> = _Del; _Tp = Expr; _Dp = std::default_delete<Expr>]’
  331 |         unique_ptr(pointer __p, const deleter_type& __d) noexcept
      |         ^~~~~~~~~~
/usr/include/c++/13/bits/unique_ptr.h:331:9: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/rosetta/transpiler/CPP/24-game-solve.cpp:204:124: note:   candidate expects 2 arguments, 1 provided
  204 |             if (solve((std::vector<std::unique_ptr<Expr>>)(([&]{ auto __tmp = rest; __tmp.push_back((std::unique_ptr<Expr>)node); return __tmp; }())))) {
      |                                                                                                                            ^~~~
/usr/include/c++/13/bits/unique_ptr.h:317:9: note: candidate: ‘template<class _Del, class> std::unique_ptr<_Tp, _Dp>::unique_ptr(pointer) [with <template-parameter-2-2> = _Del; _Tp = Expr; _Dp = std::default_delete<Expr>]’
  317 |         unique_ptr(pointer __p) noexcept
      |         ^~~~~~~~~~
/usr/include/c++/13/bits/unique_ptr.h:317:9: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/rosetta/transpiler/CPP/24-game-solve.cpp:204:124: note:   cannot convert ‘node’ (type ‘Bin’) to type ‘std::unique_ptr<Expr>::pointer’ {aka ‘Expr*’}
  204 |             if (solve((std::vector<std::unique_ptr<Expr>>)(([&]{ auto __tmp = rest; __tmp.push_back((std::unique_ptr<Expr>)node); return __tmp; }())))) {
      |                                                                                                                            ^~~~
/usr/include/c++/13/bits/unique_ptr.h:304:19: note: candidate: ‘template<class _Del, class> constexpr std::unique_ptr<_Tp, _Dp>::unique_ptr() [with <template-parameter-2-2> = _Del; _Tp = Expr; _Dp = std::default_delete<Expr>]’
  304 |         constexpr unique_ptr() noexcept
      |                   ^~~~~~~~~~
/usr/include/c++/13/bits/unique_ptr.h:304:19: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/rosetta/transpiler/CPP/24-game-solve.cpp:204:124: note:   candidate expects 0 arguments, 1 provided
  204 |             if (solve((std::vector<std::unique_ptr<Expr>>)(([&]{ auto __tmp = rest; __tmp.push_back((std::unique_ptr<Expr>)node); return __tmp; }())))) {
      |                                                                                                                            ^~~~
/usr/include/c++/13/bits/unique_ptr.h:366:7: note: candidate: ‘std::unique_ptr<_Tp, _Dp>::unique_ptr(std::unique_ptr<_Tp, _Dp>&&) [with _Tp = Expr; _Dp = std::default_delete<Expr>]’
  366 |       unique_ptr(unique_ptr&&) = default;
      |       ^~~~~~~~~~
/usr/include/c++/13/bits/unique_ptr.h:366:18: note:   no known conversion for argument 1 from ‘Bin’ to ‘std::unique_ptr<Expr>&&’
  366 |       unique_ptr(unique_ptr&&) = default;
      |                  ^~~~~~~~~~~~
/workspace/mochi/tests/rosetta/transpiler/CPP/24-game-solve.cpp: In function ‘bool solve(const std::vector<std::unique_ptr<Expr> >&)’:
/workspace/mochi/tests/rosetta/transpiler/CPP/24-game-solve.cpp:207:36: error: no matching function for call to ‘Bin::Bin(<brace-enclosed initializer list>)’
  207 |             node = Bin{OP_DIV, b, a};
      |                                    ^
/workspace/mochi/tests/rosetta/transpiler/CPP/24-game-solve.cpp:58:5: note: candidate: ‘Bin::Bin(int, std::unique_ptr<Expr>, std::unique_ptr<Expr>)’
   58 |     Bin(int op_, std::unique_ptr<Expr> left_, std::unique_ptr<Expr> right_) : op(op_), left(std::move(left_)), right(std::move(right_)) {}
      |     ^~~
/workspace/mochi/tests/rosetta/transpiler/CPP/24-game-solve.cpp:58:40: note:   no known conversion for argument 2 from ‘Expr*’ to ‘std::unique_ptr<Expr>’
   58 |     Bin(int op_, std::unique_ptr<Expr> left_, std::unique_ptr<Expr> right_) : op(op_), left(std::move(left_)), right(std::move(right_)) {}
      |                  ~~~~~~~~~~~~~~~~~~~~~~^~~~~
/workspace/mochi/tests/rosetta/transpiler/CPP/24-game-solve.cpp:54:8: note: candidate: ‘Bin::Bin(Bin&&)’
   54 | struct Bin : Expr {
      |        ^~~
/workspace/mochi/tests/rosetta/transpiler/CPP/24-game-solve.cpp:54:8: note:   candidate expects 1 argument, 3 provided
/workspace/mochi/tests/rosetta/transpiler/CPP/24-game-solve.cpp: In lambda function:
/workspace/mochi/tests/rosetta/transpiler/CPP/24-game-solve.cpp:208:124: error: no matching function for call to ‘std::unique_ptr<Expr>::unique_ptr(Bin&)’
  208 |             if (solve((std::vector<std::unique_ptr<Expr>>)(([&]{ auto __tmp = rest; __tmp.push_back((std::unique_ptr<Expr>)node); return __tmp; }())))) {
      |                                                                                                                            ^~~~
/usr/include/c++/13/bits/unique_ptr.h:390:9: note: candidate: ‘template<class _Up, class> std::unique_ptr<_Tp, _Dp>::unique_ptr(std::auto_ptr<_Up>&&) [with <template-parameter-2-2> = _Up; _Tp = Expr; _Dp = std::default_delete<Expr>]’
  390 |         unique_ptr(auto_ptr<_Up>&& __u) noexcept;
      |         ^~~~~~~~~~
/usr/include/c++/13/bits/unique_ptr.h:390:9: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/rosetta/transpiler/CPP/24-game-solve.cpp:208:124: note:   ‘Bin’ is not derived from ‘std::auto_ptr<_Up>’
  208 |             if (solve((std::vector<std::unique_ptr<Expr>>)(([&]{ auto __tmp = rest; __tmp.push_back((std::unique_ptr<Expr>)node); return __tmp; }())))) {
      |                                                                                                                            ^~~~
/usr/include/c++/13/bits/unique_ptr.h:380:9: note: candidate: ‘template<class _Up, class _Ep, class> std::unique_ptr<_Tp, _Dp>::unique_ptr(std::unique_ptr<_Up, _Ep>&&) [with _Ep = _Up; <template-parameter-2-3> = _Ep; _Tp = Expr; _Dp = std::default_delete<Expr>]’
  380 |         unique_ptr(unique_ptr<_Up, _Ep>&& __u) noexcept
      |         ^~~~~~~~~~
/usr/include/c++/13/bits/unique_ptr.h:380:9: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/rosetta/transpiler/CPP/24-game-solve.cpp:208:124: note:   ‘Bin’ is not derived from ‘std::unique_ptr<_Tp, _Dp>’
  208 |             if (solve((std::vector<std::unique_ptr<Expr>>)(([&]{ auto __tmp = rest; __tmp.push_back((std::unique_ptr<Expr>)node); return __tmp; }())))) {
      |                                                                                                                            ^~~~
/usr/include/c++/13/bits/unique_ptr.h:359:19: note: candidate: ‘template<class _Del, class> constexpr std::unique_ptr<_Tp, _Dp>::unique_ptr(std::nullptr_t) [with <template-parameter-2-2> = _Del; _Tp = Expr; _Dp = std::default_delete<Expr>]’
  359 |         constexpr unique_ptr(nullptr_t) noexcept
      |                   ^~~~~~~~~~
/usr/include/c++/13/bits/unique_ptr.h:359:19: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/rosetta/transpiler/CPP/24-game-solve.cpp:208:124: note:   cannot convert ‘node’ (type ‘Bin’) to type ‘std::nullptr_t’
  208 |             if (solve((std::vector<std::unique_ptr<Expr>>)(([&]{ auto __tmp = rest; __tmp.push_back((std::unique_ptr<Expr>)node); return __tmp; }())))) {
      |                                                                                                                            ^~~~
/usr/include/c++/13/bits/unique_ptr.h:353:9: note: candidate: ‘template<class _Del, class _DelUnref> std::unique_ptr<_Tp, _Dp>::unique_ptr(pointer, std::__enable_if_t<std::is_lvalue_reference<_Del>::value, _DelUnref&&>) [with _DelUnref = _Del; _Tp = Expr; _Dp = std::default_delete<Expr>]’ (deleted)
  353 |         unique_ptr(pointer,
      |         ^~~~~~~~~~
/usr/include/c++/13/bits/unique_ptr.h:353:9: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/rosetta/transpiler/CPP/24-game-solve.cpp:208:124: note:   candidate expects 2 arguments, 1 provided
  208 |             if (solve((std::vector<std::unique_ptr<Expr>>)(([&]{ auto __tmp = rest; __tmp.push_back((std::unique_ptr<Expr>)node); return __tmp; }())))) {
      |                                                                                                                            ^~~~
/usr/include/c++/13/bits/unique_ptr.h:344:9: note: candidate: ‘template<class _Del, class> std::unique_ptr<_Tp, _Dp>::unique_ptr(pointer, std::__enable_if_t<(! std::is_lvalue_reference<_Del>::value), _Del&&>) [with <template-parameter-2-2> = _Del; _Tp = Expr; _Dp = std::default_delete<Expr>]’
  344 |         unique_ptr(pointer __p,
      |         ^~~~~~~~~~
/usr/include/c++/13/bits/unique_ptr.h:344:9: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/rosetta/transpiler/CPP/24-game-solve.cpp:208:124: note:   candidate expects 2 arguments, 1 provided
  208 |             if (solve((std::vector<std::unique_ptr<Expr>>)(([&]{ auto __tmp = rest; __tmp.push_back((std::unique_ptr<Expr>)node); return __tmp; }())))) {
      |                                                                                                                            ^~~~
/usr/include/c++/13/bits/unique_ptr.h:331:9: note: candidate: ‘template<class _Del, class> std::unique_ptr<_Tp, _Dp>::unique_ptr(pointer, const deleter_type&) [with <template-parameter-2-2> = _Del; _Tp = Expr; _Dp = std::default_delete<Expr>]’
  331 |         unique_ptr(pointer __p, const deleter_type& __d) noexcept
      |         ^~~~~~~~~~
/usr/include/c++/13/bits/unique_ptr.h:331:9: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/rosetta/transpiler/CPP/24-game-solve.cpp:208:124: note:   candidate expects 2 arguments, 1 provided
  208 |             if (solve((std::vector<std::unique_ptr<Expr>>)(([&]{ auto __tmp = rest; __tmp.push_back((std::unique_ptr<Expr>)node); return __tmp; }())))) {
      |                                                                                                                            ^~~~
/usr/include/c++/13/bits/unique_ptr.h:317:9: note: candidate: ‘template<class _Del, class> std::unique_ptr<_Tp, _Dp>::unique_ptr(pointer) [with <template-parameter-2-2> = _Del; _Tp = Expr; _Dp = std::default_delete<Expr>]’
  317 |         unique_ptr(pointer __p) noexcept
      |         ^~~~~~~~~~
/usr/include/c++/13/bits/unique_ptr.h:317:9: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/rosetta/transpiler/CPP/24-game-solve.cpp:208:124: note:   cannot convert ‘node’ (type ‘Bin’) to type ‘std::unique_ptr<Expr>::pointer’ {aka ‘Expr*’}
  208 |             if (solve((std::vector<std::unique_ptr<Expr>>)(([&]{ auto __tmp = rest; __tmp.push_back((std::unique_ptr<Expr>)node); return __tmp; }())))) {
      |                                                                                                                            ^~~~
/usr/include/c++/13/bits/unique_ptr.h:304:19: note: candidate: ‘template<class _Del, class> constexpr std::unique_ptr<_Tp, _Dp>::unique_ptr() [with <template-parameter-2-2> = _Del; _Tp = Expr; _Dp = std::default_delete<Expr>]’
  304 |         constexpr unique_ptr() noexcept
      |                   ^~~~~~~~~~
/usr/include/c++/13/bits/unique_ptr.h:304:19: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/rosetta/transpiler/CPP/24-game-solve.cpp:208:124: note:   candidate expects 0 arguments, 1 provided
  208 |             if (solve((std::vector<std::unique_ptr<Expr>>)(([&]{ auto __tmp = rest; __tmp.push_back((std::unique_ptr<Expr>)node); return __tmp; }())))) {
      |                                                                                                                            ^~~~
/usr/include/c++/13/bits/unique_ptr.h:366:7: note: candidate: ‘std::unique_ptr<_Tp, _Dp>::unique_ptr(std::unique_ptr<_Tp, _Dp>&&) [with _Tp = Expr; _Dp = std::default_delete<Expr>]’
  366 |       unique_ptr(unique_ptr&&) = default;
      |       ^~~~~~~~~~
/usr/include/c++/13/bits/unique_ptr.h:366:18: note:   no known conversion for argument 1 from ‘Bin’ to ‘std::unique_ptr<Expr>&&’
  366 |       unique_ptr(unique_ptr&&) = default;
      |                  ^~~~~~~~~~~~
In file included from /usr/include/c++/13/memory:69:
/usr/include/c++/13/bits/stl_uninitialized.h: In instantiation of ‘constexpr bool std::__check_constructible() [with _ValueType = unique_ptr<Expr>; _Tp = const unique_ptr<Expr>&]’:
/usr/include/c++/13/bits/stl_uninitialized.h:182:4:   required from ‘_ForwardIterator std::uninitialized_copy(_InputIterator, _InputIterator, _ForwardIterator) [with _InputIterator = __gnu_cxx::__normal_iterator<const unique_ptr<Expr>*, vector<unique_ptr<Expr> > >; _ForwardIterator = unique_ptr<Expr>*]’
/usr/include/c++/13/bits/stl_uninitialized.h:373:37:   required from ‘constexpr _ForwardIterator std::__uninitialized_copy_a(_InputIterator, _InputIterator, _ForwardIterator, allocator<_Tp>&) [with _InputIterator = __gnu_cxx::__normal_iterator<const unique_ptr<Expr>*, vector<unique_ptr<Expr> > >; _ForwardIterator = unique_ptr<Expr>*; _Tp = unique_ptr<Expr>]’
/usr/include/c++/13/bits/stl_vector.h:606:31:   required from ‘constexpr std::vector<_Tp, _Alloc>::vector(const std::vector<_Tp, _Alloc>&) [with _Tp = std::unique_ptr<Expr>; _Alloc = std::allocator<std::unique_ptr<Expr> >]’
/workspace/mochi/tests/rosetta/transpiler/CPP/24-game-solve.cpp:190:47:   required from here
/usr/include/c++/13/bits/stl_uninitialized.h:90:56: error: static assertion failed: result type must be constructible from input type
   90 |       static_assert(is_constructible<_ValueType, _Tp>::value,
      |                                                        ^~~~~
/usr/include/c++/13/bits/stl_uninitialized.h:90:56: note: ‘std::integral_constant<bool, false>::value’ evaluates to false
In file included from /usr/include/c++/13/ext/alloc_traits.h:34,
                 from /usr/include/c++/13/bits/basic_string.h:39,
                 from /usr/include/c++/13/string:54,
                 from /usr/include/c++/13/bits/locale_classes.h:40,
                 from /usr/include/c++/13/bits/ios_base.h:41,
                 from /usr/include/c++/13/ios:44,
                 from /usr/include/c++/13/ostream:40,
                 from /usr/include/c++/13/iostream:41,
                 from /workspace/mochi/tests/rosetta/transpiler/CPP/24-game-solve.cpp:2:
/usr/include/c++/13/bits/alloc_traits.h: In instantiation of ‘static constexpr void std::allocator_traits<std::allocator<_CharT> >::construct(allocator_type&, _Up*, _Args&& ...) [with _Up = std::unique_ptr<Expr>; _Args = {const std::unique_ptr<Expr, std::default_delete<Expr> >&}; _Tp = std::unique_ptr<Expr>; allocator_type = std::allocator<std::unique_ptr<Expr> >]’:
/usr/include/c++/13/bits/stl_vector.h:1286:30:   required from ‘constexpr void std::vector<_Tp, _Alloc>::push_back(const value_type&) [with _Tp = std::unique_ptr<Expr>; _Alloc = std::allocator<std::unique_ptr<Expr> >; value_type = std::unique_ptr<Expr>]’
/workspace/mochi/tests/rosetta/transpiler/CPP/24-game-solve.cpp:190:68:   required from here
/usr/include/c++/13/bits/alloc_traits.h:540:28: error: no matching function for call to ‘construct_at(std::unique_ptr<Expr>*&, const std::unique_ptr<Expr>&)’
  540 |           std::construct_at(__p, std::forward<_Args>(__args)...);
      |           ~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
In file included from /usr/include/c++/13/bits/char_traits.h:57,
                 from /usr/include/c++/13/ios:42:
/usr/include/c++/13/bits/stl_construct.h:94:5: note: candidate: ‘template<class _Tp, class ... _Args> constexpr decltype (::new(void*(0)) _Tp) std::construct_at(_Tp*, _Args&& ...)’
   94 |     construct_at(_Tp* __location, _Args&&... __args)
      |     ^~~~~~~~~~~~
/usr/include/c++/13/bits/stl_construct.h:94:5: note:   template argument deduction/substitution failed:
/usr/include/c++/13/bits/stl_construct.h: In substitution of ‘template<class _Tp, class ... _Args> constexpr decltype (::new(void*(0)) _Tp) std::construct_at(_Tp*, _Args&& ...) [with _Tp = std::unique_ptr<Expr>; _Args = {const std::unique_ptr<Expr, std::default_delete<Expr> >&}]’:
/usr/include/c++/13/bits/alloc_traits.h:540:21:   required from ‘static constexpr void std::allocator_traits<std::allocator<_CharT> >::construct(allocator_type&, _Up*, _Args&& ...) [with _Up = std::unique_ptr<Expr>; _Args = {const std::unique_ptr<Expr, std::default_delete<Expr> >&}; _Tp = std::unique_ptr<Expr>; allocator_type = std::allocator<std::unique_ptr<Expr> >]’
/usr/include/c++/13/bits/stl_vector.h:1286:30:   required from ‘constexpr void std::vector<_Tp, _Alloc>::push_back(const value_type&) [with _Tp = std::unique_ptr<Expr>; _Alloc = std::allocator<std::unique_ptr<Expr> >; value_type = std::unique_ptr<Expr>]’
/workspace/mochi/tests/rosetta/transpiler/CPP/24-game-solve.cpp:190:68:   required from here
/usr/include/c++/13/bits/stl_construct.h:96:17: error: use of deleted function ‘std::unique_ptr<_Tp, _Dp>::unique_ptr(const std::unique_ptr<_Tp, _Dp>&) [with _Tp = Expr; _Dp = std::default_delete<Expr>]’
   96 |     -> decltype(::new((void*)0) _Tp(std::declval<_Args>()...))
      |                 ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/usr/include/c++/13/bits/unique_ptr.h:522:7: note: declared here
  522 |       unique_ptr(const unique_ptr&) = delete;
      |       ^~~~~~~~~~
/usr/include/c++/13/bits/stl_construct.h: In instantiation of ‘constexpr void std::_Construct(_Tp*, _Args&& ...) [with _Tp = unique_ptr<Expr>; _Args = {const unique_ptr<Expr, default_delete<Expr> >&}]’:
/usr/include/c++/13/bits/stl_uninitialized.h:120:21:   required from ‘constexpr _ForwardIterator std::__do_uninit_copy(_InputIterator, _InputIterator, _ForwardIterator) [with _InputIterator = __gnu_cxx::__normal_iterator<const unique_ptr<Expr>*, vector<unique_ptr<Expr> > >; _ForwardIterator = unique_ptr<Expr>*]’
/usr/include/c++/13/bits/stl_uninitialized.h:371:30:   required from ‘constexpr _ForwardIterator std::__uninitialized_copy_a(_InputIterator, _InputIterator, _ForwardIterator, allocator<_Tp>&) [with _InputIterator = __gnu_cxx::__normal_iterator<const unique_ptr<Expr>*, vector<unique_ptr<Expr> > >; _ForwardIterator = unique_ptr<Expr>*; _Tp = unique_ptr<Expr>]’
/usr/include/c++/13/bits/stl_vector.h:606:31:   required from ‘constexpr std::vector<_Tp, _Alloc>::vector(const std::vector<_Tp, _Alloc>&) [with _Tp = std::unique_ptr<Expr>; _Alloc = std::allocator<std::unique_ptr<Expr> >]’
/workspace/mochi/tests/rosetta/transpiler/CPP/24-game-solve.cpp:190:47:   required from here
/usr/include/c++/13/bits/stl_construct.h:115:28: error: no matching function for call to ‘construct_at(std::unique_ptr<Expr>*&, const std::unique_ptr<Expr>&)’
  115 |           std::construct_at(__p, std::forward<_Args>(__args)...);
      |           ~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/usr/include/c++/13/bits/stl_construct.h:94:5: note: candidate: ‘template<class _Tp, class ... _Args> constexpr decltype (::new(void*(0)) _Tp) std::construct_at(_Tp*, _Args&& ...)’
   94 |     construct_at(_Tp* __location, _Args&&... __args)
      |     ^~~~~~~~~~~~
/usr/include/c++/13/bits/stl_construct.h:94:5: note:   template argument deduction/substitution failed:
/usr/include/c++/13/bits/stl_construct.h: In substitution of ‘template<class _Tp, class ... _Args> constexpr decltype (::new(void*(0)) _Tp) std::construct_at(_Tp*, _Args&& ...) [with _Tp = std::unique_ptr<Expr>; _Args = {const std::unique_ptr<Expr, std::default_delete<Expr> >&}]’:
/usr/include/c++/13/bits/stl_construct.h:115:21:   required from ‘constexpr void std::_Construct(_Tp*, _Args&& ...) [with _Tp = unique_ptr<Expr>; _Args = {const unique_ptr<Expr, default_delete<Expr> >&}]’
/usr/include/c++/13/bits/stl_uninitialized.h:120:21:   required from ‘constexpr _ForwardIterator std::__do_uninit_copy(_InputIterator, _InputIterator, _ForwardIterator) [with _InputIterator = __gnu_cxx::__normal_iterator<const unique_ptr<Expr>*, vector<unique_ptr<Expr> > >; _ForwardIterator = unique_ptr<Expr>*]’
/usr/include/c++/13/bits/stl_uninitialized.h:371:30:   required from ‘constexpr _ForwardIterator std::__uninitialized_copy_a(_InputIterator, _InputIterator, _ForwardIterator, allocator<_Tp>&) [with _InputIterator = __gnu_cxx::__normal_iterator<const unique_ptr<Expr>*, vector<unique_ptr<Expr> > >; _ForwardIterator = unique_ptr<Expr>*; _Tp = unique_ptr<Expr>]’
/usr/include/c++/13/bits/stl_vector.h:606:31:   required from ‘constexpr std::vector<_Tp, _Alloc>::vector(const std::vector<_Tp, _Alloc>&) [with _Tp = std::unique_ptr<Expr>; _Alloc = std::allocator<std::unique_ptr<Expr> >]’
/workspace/mochi/tests/rosetta/transpiler/CPP/24-game-solve.cpp:190:47:   required from here
/usr/include/c++/13/bits/stl_construct.h:96:17: error: use of deleted function ‘std::unique_ptr<_Tp, _Dp>::unique_ptr(const std::unique_ptr<_Tp, _Dp>&) [with _Tp = Expr; _Dp = std::default_delete<Expr>]’
   96 |     -> decltype(::new((void*)0) _Tp(std::declval<_Args>()...))
      |                 ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/usr/include/c++/13/bits/unique_ptr.h:522:7: note: declared here
  522 |       unique_ptr(const unique_ptr&) = delete;
      |       ^~~~~~~~~~
/usr/include/c++/13/bits/stl_construct.h: In instantiation of ‘constexpr void std::_Construct(_Tp*, _Args&& ...) [with _Tp = unique_ptr<Expr>; _Args = {const unique_ptr<Expr, default_delete<Expr> >&}]’:
/usr/include/c++/13/bits/stl_uninitialized.h:120:21:   required from ‘constexpr _ForwardIterator std::__do_uninit_copy(_InputIterator, _InputIterator, _ForwardIterator) [with _InputIterator = __gnu_cxx::__normal_iterator<const unique_ptr<Expr>*, vector<unique_ptr<Expr> > >; _ForwardIterator = unique_ptr<Expr>*]’
/usr/include/c++/13/bits/stl_uninitialized.h:371:30:   required from ‘constexpr _ForwardIterator std::__uninitialized_copy_a(_InputIterator, _InputIterator, _ForwardIterator, allocator<_Tp>&) [with _InputIterator = __gnu_cxx::__normal_iterator<const unique_ptr<Expr>*, vector<unique_ptr<Expr> > >; _ForwardIterator = unique_ptr<Expr>*; _Tp = unique_ptr<Expr>]’
/usr/include/c++/13/bits/stl_vector.h:606:31:   required from ‘constexpr std::vector<_Tp, _Alloc>::vector(const std::vector<_Tp, _Alloc>&) [with _Tp = std::unique_ptr<Expr>; _Alloc = std::allocator<std::unique_ptr<Expr> >]’
/workspace/mochi/tests/rosetta/transpiler/CPP/24-game-solve.cpp:190:47:   required from here
/usr/include/c++/13/bits/stl_construct.h:119:7: error: use of deleted function ‘std::unique_ptr<_Tp, _Dp>::unique_ptr(const std::unique_ptr<_Tp, _Dp>&) [with _Tp = Expr; _Dp = std::default_delete<Expr>]’
  119 |       ::new((void*)__p) _Tp(std::forward<_Args>(__args)...);
      |       ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/usr/include/c++/13/bits/unique_ptr.h:522:7: note: declared here
  522 |       unique_ptr(const unique_ptr&) = delete;
      |       ^~~~~~~~~~
